# simple-storage

./: .gitignore  Dockerfile  README.md  app.py  build_docker.sh  create_docker.sh  deploy.sh  pyproject.toml  run_docker.sh  testpost.sh  testprod.sh
