[tool.poetry]
name = "simple-storage"
version = "0.1.0"
description = ""
authors = ["Johannes Filter <hi@jfilter.de>"]

[tool.poetry.dependencies]
python = "^3.7"
dataset = "^1.3.2"
Flask = "^1.1.2"

[tool.poetry.dev-dependencies]
black = {version = "^20.8b1", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
